assets/css/styles.css
/* ... */
.nav__logo-circle {
  border-radius: 50%;
}

.nav__toggle {
  font-size: 1.25rem;
  cursor: pointer;
}

/* Navigation for mobile devices */
@media screen and (max-width: 1150px) {
  .nav__menu {
    position: fixed;
    top: -100%;
    left: 0;
    background-color: hsla(0, 0%, 0%, .75);
    width: 100%;
    padding-block: 1.8rem 5rem;
    text-align: center;
    backdrop-filter: blur(8px);
    transition: top .4s;
  }
}

.nav__title, 
.nav__name, 
.nav__close {
  color: var(--white-color);
}

.nav__title {
  display: block;
  font-size: var(--smaller-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: 3.5rem;
}

.nav__name {
  position: relative;
  width: max-content;
  margin: 0 auto 3rem;
  font-size: var(--h2-font-size);
}

.nav__name::after, 
.nav__name::before {
  content: "";
  width: 40px;
  height: 1px;
  background-color: var(--text-color-light);
  position: absolute;
  top: 50%;
  left: -4rem;
}

.nav__name::before {
  left: initial;
  right: -4rem;
}

.nav__list {
  display: flex;
  flex-direction: column;
  row-gap: 2.5rem;
}

.nav__link {
  position: relative;
  color: var(--text-color-light);
  font-size: var(--h3-font-size);
  font-weight: var(--font-semi-bold);
  transition: color .3s;
}

.button--hover:hover{
  background-color: hsl(224, 80%, 50%);
  color: black;
  transition: .6s;
}




.nav__link::after {
  content: "";
  width: 0;
  height: 2px;
  background-color: var(--white-color);
  position: absolute;
  left: 0;
  bottom: -.5rem;
  transition: width .3s;
}

.nav__link:hover {
  color: var(--white-color);
}

.nav__link:hover::after {
  width: 25%;
}

.nav__close {
  position: absolute;
  font-size: 1.5rem;
  top: 1rem;
  right: 1.5rem;
  cursor: pointer;
}

/* Show menu */
.show-menu {
  top: 0;
}

/* Add shadow header */
.shadow-header {
  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12);
}

/* Active link */
.active-link {
  color: var(--white-color);
}
.active-link::after {
  width: 25%;
}

/*=============== HOME ===============*/
.home__container {
  padding-top: 2rem;
}

.home__name {
  font-size: var(--biggest-font-size);
  text-align: center;

}
.heading--color {
  color: var(--first-color);
}

.home__perfil {
  position: relative;
  justify-self: center;
}

.home__image {
  width: 220px;
}

.home__img {
  position: relative;
  z-index: 10;
}

.home__shadow {
  width: 100%;
  height: 100%;
  background-color: var(--container-color);
  position: absolute;
  bottom: -.75rem;
  right: -.75rem;
  border: 4px solid var(--black-color);
  z-index: 5;
  transition: background-color .4s; /* for dark mode */
}

.home__arrow, 
.home__line {
  position: absolute;
  filter: invert(1);
  width: 50px;
  transition: filter .4s; /* for dark mode */
}

.home__arrow {
  left: 40%;
  bottom: -4rem;
}

.home__line {
  right: -2rem;
  bottom: -.5rem;
}

.home__perfil .geometric-box {
  top: 2.5rem;
  left: -.7rem;
  z-index: 10;
}

.home__social {
  height: max-content;
  position: absolute;
  left: -3rem;
  top: 0;
  bottom: 0;
  margin: auto 0;
  display: grid;
  row-gap: 1rem;
}

.home__social-link {
  background-color: var(--black-color-light);
  color: var(--white-color);
  font-size: 1.25rem;
  padding: 6px;
  display: grid;
  place-items: center;
  transition: background-color .3s;
}

.home__social-link:hover {
  background-color: var(--black-color);
}

.home__info {
  margin-top: 4rem;
}

.home__description {
  text-align: center;
  color: var(--title-color);
  margin-bottom: 1.5rem;
}

.home__description b {
  background: linear-gradient(90deg, 
          hsla(221, 97%, 61%, 0.2), 
            hsla(14, 98%, 50%, 0));
}

.home__scroll {
  display: block;
  width: max-content;
  margin: 0 auto;
}

.home__scroll-text {
  display: none;
}

.home__scroll-box {
  background-color: var(--black-color);
  color: var(--white-color);
  width: 36px;
  height: 36px;
  display: grid;
  place-items: center;
  font-size: 1rem;
  cursor: pointer;
  overflow: hidden;
  transition: background-color .4s; /* for dark mode */
}

.home__scroll-box i {
  animation: scroll-down 3s infinite;
}

/* Animate scroll icon */
@keyframes scroll-down {
  0% {
    transform: translateY(-1rem);
    opacity: 0;
  }
  50% {
    transform: translateY(0);
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(.6rem);
  }
}

/*=============== BUTTON ===============*/
.button,
.button__ghost {
  display: flex;
  align-items: center;
  justify-content: center;
  column-gap: .5rem;
}

.button {
  background-color: var(--black-color);
  padding: 1.1rem 1.5rem;
  color: var(--white-color);
  font-weight: var(--font-medium);
  transition: background-color .4s;
}

.button i {
  font-size: 1.25rem;
}

.button:hover {
  background-color: var(--first-color);
}

.button__ghost {
  border: 3px solid var(--black-color);
  color: var(--black-color);
  padding: .5rem;
  transition: border .4s, color .4s;
}

.button__ghost i {
  font-size: 1.25rem;
}

.button__ghost:hover {
  border: 3px solid var(--first-color);
}

/*=============== ABOUT ===============*/
.about {
  background-color: var(--container-color);
  transition: background-color .4s; /* for dark mode */
}

.about__container {
  row-gap: 0;
}

.about__perfil {
  position: relative;
  justify-self: center;
  margin-block: 2.5rem 4.5rem;
}

.about__image {
  width: 220px;
}

.about__img {
  position: relative;
  border: 4px solid var(--white-color);
  z-index: 1;
}

.about__shadow, 
.about__line, 
.about__box {
  position: absolute;
}

.about__shadow {
  width: 150px;
  height: 385px;
  background-color: var(--body-color);
  top: -2.5rem;
  right: -3.5rem;
  border-bottom: 4px solid var(--first-color);
  transition: background-color .4s; /* for dark mode */
}

.about__perfil .geometric-box {
  top: 1.5rem;
  right: -2.8rem;
}

.about__line {
  filter: invert(1);
  right: -1.25rem;
  top: 6rem;
  width: 50px;
  transition: filter .4s; /* for dark mode */
}
/* ... */

